<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/HeaderStyle"
    android:background="@drawable/gradient_library">

    <!--Favorites Label-->
    <TextView
        style="@style/ActivityLabelStyle"
        android:layout_marginTop="@dimen/margin_top_header"
        android:text="@string/labelLibrary" />

    <!--Number of Playlists-->
    <RelativeLayout style="@style/HorizontalLL">

        <!--Playlist Label-->
        <Button
            style="@style/ButtonStyle"
            android:clickable="false"
            android:text="@string/buttonPlaylist"
            app:icon="@drawable/ic_playlist" />

        <TextView
            style="@style/EndStyle"
            android:contentDescription="@string/descriptionArrow"
            android:text="@string/numPlaylist" />
    </RelativeLayout>

    <!--Number of Albums-->
    <RelativeLayout style="@style/HorizontalLL">

        <!--Album Label-->
        <Button
            style="@style/ButtonStyle"
            android:clickable="false"
            android:text="@string/buttonAlbum"
            app:icon="@drawable/ic_album" />

        <TextView
            style="@style/EndStyle"
            android:contentDescription="@string/descriptionArrow"
            android:text="@string/numAlbum" />
    </RelativeLayout>

    <!--Number of Artists-->
    <RelativeLayout style="@style/HorizontalLL">

        <!--Artist Label-->
        <Button
            style="@style/ButtonStyle"
            android:clickable="false"
            android:text="@string/buttonArtist"
            app:icon="@drawable/ic_artist" />

        <TextView
            style="@style/EndStyle"
            android:contentDescription="@string/descriptionArrow"
            android:text="@string/numArtist" />
    </RelativeLayout>

    <!--Number of Subscriptions-->
    <RelativeLayout style="@style/HorizontalLL">

        <!--Subscription Label-->
        <Button
            style="@style/ButtonStyle"
            android:clickable="false"
            android:text="@string/buttonSubscriptions"
            app:icon="@drawable/ic_subscriptions" />

        <TextView
            style="@style/EndStyle"
            android:contentDescription="@string/descriptionArrow"
            android:text="@string/numSub" />
    </RelativeLayout>

    <!--Divider-->
    <View
        style="@style/DividerStyle" />
</LinearLayout>